# Qt-IOS-minimal-app

./: CMakeLists.txt  Info.plist  README.md  iosinterface.cpp  iosinterface.h  iosinterface.mm  ioslocationbgndservice.h  ioslocationbgndservice.mm  ioslocationimpl.h  ioslocationimpl.mm  main.cpp  main.qml
